Redesign frontend, add deployment config, harden rate limiting
- Rebuild frontend UI (header lockup, hero, footer, source-hold animation)
- Add Dockerfile + .dockerignore + README for Hugging Face Space deploy
- Add GitHub Pages workflow deploying frontend/
- Wire HF Space WS URL and GitHub source links
- Rate limit: behind-proxy fail-open to avoid global throttle; 30/hr